# modsim

./: README.md  pyproject.toml
examples/: config.json
src/modsim/: main.py  server.py
