[tool.poetry]
name = "modsim"
version = "0.1.0"
description = ""
authors = ["Nick Garanko <nick.garanko@helindata.com>"]
readme = "README.md"
packages = [{include = "modsim", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
pymodbus = "^3.5.4"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
modsim = "modsim.main:cli"